[package]
name = "simple_rsa"
version = "0.1.0"
authors = ["awick@uhsure.com"]

[dependencies]
digest      = "^0.7.1"
lazy_static = "^1.0.0"
num         = "^0.1.39"
rand        = "^0.3"
sha-1       = "^0.7.0"
sha2        = "^0.7.0"

[dev-dependencies]
quickcheck = "^0.4.1"

[profile.test]
opt-level = 2
debug = true
debug-assertions = true

